--- a/sass/admin/block-editor-styles.scss
+++ b/sass/admin/block-editor-styles.scss
@@ -242,6 +242,11 @@ h6{
 	}
 }
 
+.ast-separate-container .ast-stacked-title-visibility .edit-post-visual-editor__post-title-wrapper, .ast-two-container .edit-post-visual-editor__post-title-wrapper{
+	padding-left: calc( 6.67em - 28px );
+	padding-right: calc( 6.67em - 28px );
+}
+
 /**
  * Woocommerce Gutenberg Blocks Product Grid CSS Compatibility.
  */
